--- a/src/main/resources/templates/add_offer.html
+++ b/src/main/resources/templates/add_offer.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <title>Add New Offer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FoodExpress</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"  />
-</head>
+<head th:replace="fragments/head"></head>
 <body class="add-offer-page">
 
 <div class="container-fluid">
