--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -2,18 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>FoodExpress</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-
-</head>
+<head th:replace="fragments/head"></head>
 
 <body class="about-page">
 
