--- a/src/main/resources/templates/offers.html
+++ b/src/main/resources/templates/offers.html
@@ -19,7 +19,7 @@
 
         <div class="offer card col-sm-6 col-md-3  col-lg-2 m-1 p-0">
             <div class="card-img-top-wrapper">
-                <img class="card-img-top" th:src="*{imageUrl}" alt="Offer image">
+                <img class="card-img-top" th:src="*{image_url}" alt="Offer image">
             </div>
 
             <ul class="offer-details list-group list-group-flush">
