--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -625,8 +625,10 @@ nav button:hover::after {
     height: 47px;
     background-color: #333;
     border-radius: 3px;
-    border: none;
+    border: 2px solid #5c9f39;
     font-size: 20px;
+    color: white;
+
 }
 
 .add-offer-page .container-fluid input::placeholder{
@@ -634,6 +636,7 @@ nav button:hover::after {
     margin-left: 15px;
     padding: 12px;
     color: white;
+
 }
 
 .add-offer-page .container-fluid input[type=submit]{
@@ -661,7 +664,7 @@ nav button:hover::after {
 }
 
 .add-offer-page .container-fluid label{
-    color: rgb(125,119,119);
+    color: white;
 }
 .button {
     display: inline-block;
@@ -860,7 +863,6 @@ table .field{
     margin-left: 500px;
     margin-top: 70px;
 }
-
 
 
 
